# tiny-hello-world

./: CMakeLists.txt  README.md  sdkconfig
components/ui/: CMakeLists.txt  fonts.h  screens.c  ui_font_pixellari.c
eezstudio/: small.eez-project  small.eez-project-ui-state
main/: CMakeLists.txt  idf_component.yml  tiny_hello_world.c
main/LCD_Driver/: SSD1306.c  SSD1306.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
